force-app/main/default/objects/Payment_Receipt__c/Payment_Receipt__c.object-meta.xml
<CustomObject>
    <label>Payment Receipt</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Payment Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>