force-app/main/default/objects/Payment_Receipt__c/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <formula>Payment__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>