force-app/main/default/objects/Payment_Receipt__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>ISPICKVAL(Payment__r.Status, &quot;Processed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>